# wechat-fav-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  wechatfav_scraper.py
