[tool.poetry]
name = "wechat-fav-scraper"
version = "0.1.0"
description = "A tool to scrape and export favorite items from WeChat."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/x1angli/wechat-fav-scraper"
repository = "https://github.com/x1angli/wechat-fav-scraper"
keywords = ["wechat", "scraper", "favorites", "organization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
package-mode = false


[tool.poetry.dependencies]
python = "^3.8"
pypandoc = "^1.5"
psutil = "^5.9.0"
pywinauto = "^0.6.8"

[tool.poetry.scripts]
wechat-fav-scraper = "wechat_fav_scraper.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
